# test

./: Dockerfile  Makefile  calclulator.py  pyproject.toml  test_calculator.py
.github/workflows/: build-deploy.yml  caller.yaml  generate_poetry_lock  init.yaml  pnpm-cache-test.yml  python-cache.yml  python.yml  test-cache.yaml  test-docker-cache.yml  test-poetry.yml  test-reusable.yml  test-slack-notification.yml  test.yml  test_duplo.yml  test_environment_variable  test_environment_variable.yml
deploy/config/: event-temple-service.yaml  preview-bulk-processing.yaml  preview-dynamo.yaml  preview-sidekiq.yaml  redis-lb.yaml  redis.yaml
dummy-frontend/: Dockerfile  package.json
mathutils/: basic.py
test/: test_basic.py
tests/: test_basic.py  test_calculator.py
