[tool.poetry]
name = "test-poetry-pytest"
version = "0.1.0"
description = ""
authors = ["You <you@example.com>"]
packages = [{ include = "mathutils" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
