[tool.poetry]
name = "test-poetry-pytest"
version = "0.1.0"
description = ""
packages = [{ include = "app" }]
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
